--- a/src/components/Confirmation/Confirmation.scss
+++ b/src/components/Confirmation/Confirmation.scss
@@ -1,35 +1,61 @@
-.MuiPaper-root {
+.paper {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 754px;
+  flex-direction: column;
+  // flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 554px;
   height: 344px;
   padding: 28px 32px;
   box-sizing: border-box;
+  box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
+  border: 1px solid rgb(221, 221, 221);
 }
 
-.MuiButton- {
+.confirm-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 17px;
+  width: 300px;
 
-  &root {
-    bottom: 0px;
-    width: 125px;
-    height: 48px;
-
-    & span {
-      font-size: 14px;
-      text-transform: capitalize;
-    }
+  & p:first-child {
+    color: gray;
+    font-size: 15px;
   }
 }
 
-.buttonWrapper {
-  display: flex;
-  justify-content: center;
-  flex: 0 1 100%;
-  height: 48px;
+.error {
+  display: block;
+  position: absolute;
+  transform: translateY(170px);
+  text-align: center;
+
+  &-link {
+    cursor: pointer;
+    text-decoration: underline;
+    color: blue;
+  }
 }
 
-.tradeWindow {
-  flex: 1 0 50%;
-  height: 240px;
+.buttonWrapper-confirmation {
+  // display: flex;
+  // justify-content: center;
+  // flex: 0 1 100%;
+  height: 48px;
+  margin: 0 0 20px
+}
+
+.header-confirmation {
+  width: 100%;
+  text-align: center;
+}
+
+.btn {
+  margin: 0 0 10px;
+  bottom: 0px;
+  width: 125px;
+  height: 48px;
+  margin: 10px;
 }
