--- a/src/components/Success/Success.scss
+++ b/src/components/Success/Success.scss
@@ -1,35 +1,39 @@
-.MuiPaper-root {
+.success {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 754px;
+  flex-direction: column;
+  // flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 554px;
   height: 344px;
   padding: 28px 32px;
   box-sizing: border-box;
-}
+  box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
+  border: 1px solid rgb(221, 221, 221);
+  text-align: center;
 
-.MuiButton- {
-
-  &root {
-    bottom: 0px;
-    width: 125px;
-    height: 48px;
-
-    & span {
-      font-size: 14px;
-      text-transform: capitalize;
-    }
+  &-img{
+    background: url(../../images/success.svg) no-repeat center center/contain;
+    width: 200px;
+    height: 400px;
   }
 }
 
 .buttonWrapper {
   display: flex;
   justify-content: center;
-  flex: 0 1 100%;
+  // flex: 0 1 100%;
   height: 48px;
+  
+  margin: 10px 0 -20px;
 }
 
 .tradeWindow {
   flex: 1 0 50%;
   height: 240px;
+}
+
+form {
+  width: 90%;
 }
