--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,5 @@
 .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
+  text-align: center;
 }
 
 .App-logo {
